@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -25,13 +25,17 @@
 /*
  * @test
  * @enablePreview
+ * @modules java.base/jdk.internal.foreign
  * @run testng/othervm TestSegmentAllocators
  */
 
 import java.lang.foreign.*;
 
+import jdk.internal.foreign.MappedMemorySegmentImpl;
+import jdk.internal.foreign.NativeMemorySegmentImpl;
 import org.testng.annotations.*;
 
+import java.lang.foreign.Arena;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
@@ -46,36 +50,33 @@ import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.IntStream;
-import java.util.stream.LongStream;
 
 import static org.testng.Assert.*;
 
 public class TestSegmentAllocators {
 
     final static int ELEMS = 128;
-    final static Class<?> ADDRESS_CARRIER = ValueLayout.ADDRESS.bitSize() == 64 ? long.class : int.class;
 
     @Test(dataProvider = "scalarAllocations")
     @SuppressWarnings("unchecked")
     public <Z, L extends ValueLayout> void testAllocation(Z value, AllocationFactory allocationFactory, L layout, AllocationFunction<Z, L> allocationFunction, Function<MemoryLayout, VarHandle> handleFactory) {
-        layout = (L)layout.withBitAlignment(layout.bitSize());
+        layout = (L)layout.withByteAlignment(layout.byteSize());
         L[] layouts = (L[])new ValueLayout[] {
                 layout,
-                layout.withBitAlignment(layout.bitAlignment() * 2),
-                layout.withBitAlignment(layout.bitAlignment() * 4),
-                layout.withBitAlignment(layout.bitAlignment() * 8)
+                layout.withByteAlignment(layout.byteAlignment() * 2),
+                layout.withByteAlignment(layout.byteAlignment() * 4),
+                layout.withByteAlignment(layout.byteAlignment() * 8)
         };
         for (L alignedLayout : layouts) {
             List<MemorySegment> addressList = new ArrayList<>();
             int elems = ELEMS / ((int)alignedLayout.byteAlignment() / (int)layout.byteAlignment());
-            MemorySession[] sessions = {
-                    MemorySession.openConfined(),
-                    MemorySession.openShared()
+            Arena[] arenas = {
+                    Arena.ofConfined(),
+                    Arena.ofShared()
             };
-            for (MemorySession session : sessions) {
-                try (session) {
-                    SegmentAllocator allocator = allocationFactory.allocator(alignedLayout.byteSize() * ELEMS, session);
+            for (Arena arena : arenas) {
+                try (arena) {
+                    SegmentAllocator allocator = allocationFactory.allocator(alignedLayout.byteSize() * ELEMS, arena);
                     for (int i = 0; i < elems; i++) {
                         MemorySegment address = allocationFunction.allocate(allocator, alignedLayout, value);
                         assertEquals(address.byteSize(), alignedLayout.byteSize());
@@ -87,16 +88,14 @@ public class TestSegmentAllocators {
                     try {
                         allocationFunction.allocate(allocator, alignedLayout, value);
                         assertFalse(isBound);
-                    } catch (OutOfMemoryError ex) {
+                    } catch (IndexOutOfBoundsException ex) {
                         //failure is expected if bound
                         assertTrue(isBound);
                     }
                 }
-                if (allocationFactory != AllocationFactory.IMPLICIT_ALLOCATOR) {
-                    // addresses should be invalid now
-                    for (MemorySegment address : addressList) {
-                        assertFalse(address.session().isAlive());
-                    }
+                // addresses should be invalid now
+                for (MemorySegment address : addressList) {
+                    assertFalse(address.scope().isAlive());
                 }
             }
         }
@@ -106,38 +105,25 @@ public class TestSegmentAllocators {
 
     @Test
     public void testBigAllocationInUnboundedSession() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            SegmentAllocator allocator = SegmentAllocator.newNativeArena(session);
+        try (Arena arena = Arena.ofConfined()) {
             for (int i = 8 ; i < SIZE_256M ; i *= 8) {
+                SegmentAllocator allocator = SegmentAllocator.slicingAllocator(arena.allocate(i * 2 + 1));
                 MemorySegment address = allocator.allocate(i, i);
                 //check size
                 assertEquals(address.byteSize(), i);
                 //check alignment
-                assertEquals(address.address().toRawLongValue() % i, 0);
+                assertEquals(address.address() % i, 0);
             }
         }
     }
 
     @Test
     public void testTooBigForBoundedArena() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            SegmentAllocator allocator = SegmentAllocator.newNativeArena(10, session);
-            assertThrows(OutOfMemoryError.class, () -> allocator.allocate(12));
-            allocator.allocate(5); // ok
+        try (Arena arena = Arena.ofConfined()) {
+            SegmentAllocator allocator = SegmentAllocator.slicingAllocator(arena.allocate(10));
+            assertThrows(IndexOutOfBoundsException.class, () -> allocator.allocate(12));
+            allocator.allocate(5);
         }
-    }
-
-    @Test
-    public void testBiggerThanBlockForBoundedArena() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            SegmentAllocator allocator = SegmentAllocator.newNativeArena(4 * 1024 * 2, session);
-            allocator.allocate(4 * 1024 + 1); // should be ok
-        }
-    }
-
-    @Test(expectedExceptions = IllegalArgumentException.class)
-    public void testBadUnboundedArenaSize() {
-        SegmentAllocator.newNativeArena( -1, MemorySession.global());
     }
 
     @Test(dataProvider = "allocators", expectedExceptions = IllegalArgumentException.class)
@@ -165,10 +151,16 @@ public class TestSegmentAllocators {
         allocator.allocateArray(ValueLayout.JAVA_BYTE, -1);
     }
 
+    @Test(dataProvider = "allocators", expectedExceptions = IllegalArgumentException.class)
+    public void testBadAllocationArrayOverflow(SegmentAllocator allocator) {
+        allocator.allocateArray(ValueLayout.JAVA_LONG,  Long.MAX_VALUE);
+    }
+
     @Test(expectedExceptions = OutOfMemoryError.class)
     public void testBadArenaNullReturn() {
-        SegmentAllocator segmentAllocator = SegmentAllocator.newNativeArena(MemorySession.openImplicit());
-        segmentAllocator.allocate(Long.MAX_VALUE, 2);
+        try (Arena arena = Arena.ofConfined()) {
+            arena.allocate(Long.MAX_VALUE, 2);
+        }
     }
 
     @Test
@@ -176,7 +168,7 @@ public class TestSegmentAllocators {
         AtomicInteger calls = new AtomicInteger();
         SegmentAllocator allocator = new SegmentAllocator() {
             @Override
-            public MemorySegment allocate(long bytesSize, long bytesAlignment) {
+            public MemorySegment allocate(long bytesSize, long byteAlignment) {
                 return null;
             }
 
@@ -201,8 +193,9 @@ public class TestSegmentAllocators {
         AtomicInteger calls = new AtomicInteger();
         SegmentAllocator allocator = new SegmentAllocator() {
             @Override
-            public MemorySegment allocate(long bytesSize, long bytesAlignment) {
-                return MemorySegment.allocateNative(bytesSize, bytesAlignment, MemorySession.openImplicit());
+
+            public MemorySegment allocate(long byteSize, long byteAlignment) {
+                return Arena.ofAuto().allocate(byteSize, byteAlignment);
             }
 
             @Override
@@ -219,16 +212,37 @@ public class TestSegmentAllocators {
     @Test(dataProvider = "arrayAllocations")
     public <Z> void testArray(AllocationFactory allocationFactory, ValueLayout layout, AllocationFunction<Object, ValueLayout> allocationFunction, ToArrayHelper<Z> arrayHelper) {
         Z arr = arrayHelper.array();
-        MemorySession[] sessions = {
-                MemorySession.openConfined(),
-                MemorySession.openShared()
+        Arena[] arenas = {
+                Arena.ofConfined(),
+                Arena.ofShared()
         };
-        for (MemorySession session : sessions) {
-            try (session) {
-                SegmentAllocator allocator = allocationFactory.allocator(100, session);
+        for (Arena arena : arenas) {
+            try (arena) {
+                SegmentAllocator allocator = allocationFactory.allocator(100, arena);
                 MemorySegment address = allocationFunction.allocate(allocator, layout, arr);
                 Z found = arrayHelper.toArray(address, layout);
                 assertEquals(found, arr);
+            }
+        }
+    }
+
+    @Test(dataProvider = "arrayAllocations")
+    public <Z> void testPredicatesAndCommands(AllocationFactory allocationFactory, ValueLayout layout, AllocationFunction<Object, ValueLayout> allocationFunction, ToArrayHelper<Z> arrayHelper) {
+        Z arr = arrayHelper.array();
+        Arena[] arenas = {
+                Arena.ofConfined(),
+                Arena.ofShared()
+        };
+        for (Arena arena : arenas) {
+            try (arena) {
+                SegmentAllocator allocator = allocationFactory.allocator(100, arena);
+                MemorySegment segment = allocationFunction.allocate(allocator, layout, arr);
+                assertThrows(UnsupportedOperationException.class, segment::load);
+                assertThrows(UnsupportedOperationException.class, segment::unload);
+                assertThrows(UnsupportedOperationException.class, segment::isLoaded);
+                assertThrows(UnsupportedOperationException.class, segment::force);
+                assertFalse(segment.isMapped());
+                assertEquals(segment.isNative(), segment instanceof NativeMemorySegmentImpl);
             }
         }
     }
@@ -259,7 +273,7 @@ public class TestSegmentAllocators {
             scalarAllocations.add(new Object[] { 42d, factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN),
                     (AllocationFunction.OfDouble) SegmentAllocator::allocate,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
-            scalarAllocations.add(new Object[] { MemoryAddress.ofLong(42), factory, ValueLayout.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
+            scalarAllocations.add(new Object[] { MemorySegment.ofAddress(42), factory, ValueLayout.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
                     (AllocationFunction.OfAddress) SegmentAllocator::allocate,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
 
@@ -282,7 +296,7 @@ public class TestSegmentAllocators {
             scalarAllocations.add(new Object[] { 42d, factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.LITTLE_ENDIAN),
                     (AllocationFunction.OfDouble) SegmentAllocator::allocate,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
-            scalarAllocations.add(new Object[] { MemoryAddress.ofLong(42), factory, ValueLayout.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
+            scalarAllocations.add(new Object[] { MemorySegment.ofAddress(42), factory, ValueLayout.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
                     (AllocationFunction.OfAddress) SegmentAllocator::allocate,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
         }
@@ -350,7 +364,7 @@ public class TestSegmentAllocators {
         interface OfFloat extends AllocationFunction<Float, ValueLayout.OfFloat> { }
         interface OfLong extends AllocationFunction<Long, ValueLayout.OfLong> { }
         interface OfDouble extends AllocationFunction<Double, ValueLayout.OfDouble> { }
-        interface OfAddress extends AllocationFunction<MemoryAddress, ValueLayout.OfAddress> { }
+        interface OfAddress extends AllocationFunction<MemorySegment, AddressLayout> { }
 
         interface OfByteArray extends AllocationFunction<byte[], ValueLayout.OfByte> { }
         interface OfCharArray extends AllocationFunction<char[], ValueLayout.OfChar> { }
@@ -362,21 +376,20 @@ public class TestSegmentAllocators {
     }
 
     enum AllocationFactory {
-        ARENA_BOUNDED(true, SegmentAllocator::newNativeArena),
-        ARENA_UNBOUNDED(false, (size, session) -> SegmentAllocator.newNativeArena(session)),
-        NATIVE_ALLOCATOR(false, (size, session) -> session),
-        IMPLICIT_ALLOCATOR(false, (size, session) -> SegmentAllocator.implicitAllocator());
+        SLICING(true, (size, arena) -> {
+            return SegmentAllocator.slicingAllocator(arena.allocate(size, 1));
+        });
 
         private final boolean isBound;
-        private final BiFunction<Long, MemorySession, SegmentAllocator> factory;
+        private final BiFunction<Long, Arena, SegmentAllocator> factory;
 
-        AllocationFactory(boolean isBound, BiFunction<Long, MemorySession, SegmentAllocator> factory) {
+        AllocationFactory(boolean isBound, BiFunction<Long, Arena, SegmentAllocator> factory) {
             this.isBound = isBound;
             this.factory = factory;
         }
 
-        SegmentAllocator allocator(long size, MemorySession session) {
-            return factory.apply(size, session);
+        SegmentAllocator allocator(long size, Arena arena) {
+            return factory.apply(size, arena);
         }
 
         public boolean isBound() {
@@ -492,42 +505,12 @@ public class TestSegmentAllocators {
                 return found;
             }
         };
-
-        ToArrayHelper<MemoryAddress[]> toAddressArray = new ToArrayHelper<>() {
-            @Override
-            public MemoryAddress[] array() {
-                return switch ((int) ValueLayout.ADDRESS.byteSize()) {
-                    case 4 -> wrap(toIntArray.array());
-                    case 8 -> wrap(toLongArray.array());
-                    default -> throw new IllegalStateException("Cannot get here");
-                };
-            }
-
-            @Override
-            public MemoryAddress[] toArray(MemorySegment segment, ValueLayout layout) {
-                return switch ((int)layout.byteSize()) {
-                    case 4 -> wrap(toIntArray.toArray(segment, layout));
-                    case 8 -> wrap(toLongArray.toArray(segment, layout));
-                    default -> throw new IllegalStateException("Cannot get here");
-                };
-            }
-
-            private MemoryAddress[] wrap(int[] ints) {
-                return IntStream.of(ints).mapToObj(MemoryAddress::ofLong).toArray(MemoryAddress[]::new);
-            }
-
-            private MemoryAddress[] wrap(long[] ints) {
-                return LongStream.of(ints).mapToObj(MemoryAddress::ofLong).toArray(MemoryAddress[]::new);
-            }
-        };
     }
 
     @DataProvider(name = "allocators")
     static Object[][] allocators() {
         return new Object[][] {
-                { SegmentAllocator.implicitAllocator() },
-                { SegmentAllocator.newNativeArena(MemorySession.global()) },
-                { SegmentAllocator.prefixAllocator(MemorySegment.allocateNative(10, MemorySession.global())) },
+                { SegmentAllocator.prefixAllocator(Arena.global().allocate(10, 1)) },
         };
     }
 }
